--- a/01_웹-페이지와-Javascript/01-HelloWorld(1).html
+++ b/01_웹-페이지와-Javascript/01-HelloWorld(1).html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/4.0.0-beta/jquery.min.js"></script>
+    <script>
+      console.log('Hello World!');
+
+      const foo = $('#foo');
+      foo.html('Hello World');
+    </script>
+  </head>
+  <body>
+    <h1 id="foo"></h1>
+  </body>
 </html>
