제이쿼리 이벤트처리

--- a/02_이벤트-처리/01-ClickEvent.html
+++ b/02_이벤트-처리/01-ClickEvent.html
@@ -19,7 +19,7 @@
     </style>
   </head>
   <body>
-    <div id="listener" class="event-box">Mouse Here~!!!</div>
+    <div id="listener" class="event-box">Mouse Event!!!</div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/4.0.0-beta/jquery.min.js"></script>
     <script>
       const eventbox = $("#listener");
