--- a/03_HTML-제어/01-image.html
+++ b/03_HTML-제어/01-image.html
@@ -40,58 +40,35 @@
   </head>
   <body>
     <ul class="img-list">
-      <li>
-        <a href="./img/img01.jpg" title="테스트 이미지1" class="link"
-          ><img src="./img/img01.jpg"
-        /></a>
-      </li>
-      <li>
-        <a href="./img/img02.jpg" title="테스트 이미지2" class="link"
-          ><img src="./img/img02.jpg"
-        /></a>
-      </li>
-      <li>
-        <a href="./img/img03.jpg" title="테스트 이미지3" class="link"
-          ><img src="./img/img03.jpg"
-        /></a>
-      </li>
-      <li>
-        <a href="./img/img04.jpg" title="테스트 이미지4" class="link"
-          ><img src="./img/img04.jpg"
-        /></a>
-      </li>
-      <li>
-        <a href="./img/img05.jpg" title="테스트 이미지5" class="link"
-          ><img src="./img/img05.jpg"
-        /></a>
-      </li>
+      <li><a href="./img/img01.jpg" title="테스트 이미지1" class="link"><img src="./img/img01.jpg"/></a></li>
+      <li><a href="./img/img02.jpg" title="테스트 이미지2" class="link"><img src="./img/img02.jpg"/></a></li>
+      <li><a href="./img/img03.jpg" title="테스트 이미지3" class="link"><img src="./img/img03.jpg"/></a></li>
+      <li><a href="./img/img04.jpg" title="테스트 이미지4" class="link"><img src="./img/img04.jpg"/></a></li>
+      <li><a href="./img/img05.jpg" title="테스트 이미지5" class="link"><img src="./img/img05.jpg"/></a></li>
     </ul>
-    <div class="viewer">
-      <img src="./img/img01.jpg" id="target" />
-    </div>
+    <div class="viewer"><img src="./img/img01.jpg" id="target" /></div>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/4.0.0-beta/jquery.min.js"></script>
     <script>
-      document.querySelectorAll(".link").forEach((v, i) => {
-        console.group(`${i}번째 원소`);
-        console.log(v);
-        console.groupEnd();
-
-        v.addEventListener("click", (e) => {
+      // 다중 객체에 대한 반복문으로 이벤트를 설정할 필요가 없다!!!
+      $(".link").on("click", (e) => {
           e.preventDefault();
-          //e.preventDefault();는 링크 클릭 시 기본 동작(페이지 이동)을 막습니다
 
-          const src = e.currentTarget.getAttribute("href"); 
-          const title = e.currentTarget.getAttribute("title");
-          // e.currentTarget는 현재 클릭된 <a> 요소를 가리킵니다.
-          //getAttribute("href")를 사용해 <a> 요소의 href 속성(이미지 파일 경로)을 가져옵니다.
-          //getAttribute("title")를 사용해 <a> 요소의 title 속성(이미지 제목)을 가져옵니다.
+          // 클릭된 링크가 갖는 속성값 가져오기
+          // --> 링크가 가르키는 원본 이미지의 주소
+          const src = $(e.currentTarget).attr("href");      // --> img/img04.jpg
+          const title =$( e.currentTarget).attr("title");   // --> 테스트 이미지4
           console.log(src);
           console.log(title);
 
-          const target = document.querySelector("#target");
-          //document.querySelector("#target")를 사용하여 메인 이미지 뷰어의 <img> 요소를 선택합니다.
-          target.setAttribute("src", src);
-          target.setAttribute("title", title);
+          const target = $("#target");
+          // target.attr("src", src);
+          // target.attr("alt", title);
+
+          //또는⬇️ 의 방법으로도 가능
+          target.attr({
+            src: src,
+            alt: title
         });
       });
     </script>
