--- a/03_HTML-제어/04-tab.html
+++ b/03_HTML-제어/04-tab.html
@@ -81,23 +81,20 @@
         <p>Seoul is the capital of South Korea.</p>
       </div>
     </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/4.0.0-beta/jquery.min.js"></script>
     <script>
-      document.querySelectorAll(".tab-button").forEach(button => {
-        button.addEventListener('click', (e) => {
+      $(".tab-button").on('click', (e) => {
           e.preventDefault();  // 링크의 기본 동작 방지
 
-          // 현재 활성화된 탭과 페이지를 비활성화
-          document.querySelectorAll(".tab-button.active").forEach(btn => btn.classList.remove('active'));
-          document.querySelectorAll(".tab-page.active").forEach(page => page.classList.remove('active'));
+          const current = $(e.currentTarget);
+          current.addClass('active');
+          $(".tab-button").not(current).removeClass('active');
 
-          // 클릭한 버튼을 활성화
-          button.classList.add('active');
-
-          // 해당하는 페이지를 활성화
-          const href = button.getAttribute("href");
-          document.querySelector(href).classList.add('active');
+          const target = current.attr('href'); // --> #newyork
+          $(target).addClass('active');
+          $(".tab-page").not(target).removeClass('active');
         });
-      });
     </script>
   </body>
 </html>
