--- a/03_HTML-제어/05-banner.html
+++ b/03_HTML-제어/05-banner.html
@@ -7,15 +7,21 @@
 </head>
 <body>
   <a href="https://www.naver.com/" id="bannerLink"><img src="./img/1.png" id="bannerImg" width="200" ></a>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/4.0.0-beta/jquery.min.js"></script>
   <script>
+    // 출력할 이미지 경로들
     const imgList =["./img/1.png","./img/2.jpg","./img/3.jpg"];
     const urlList = ["https://www.naver.com/","https://www.daum.net/","https://www.google.com/"];
 
+    // 현재 출력하고 있는 이미지의 인덱스
     let currentIndex = 0;
 
     setInterval(() => {
-      document.querySelector('#bannerImg').setAttribute('src',imgList[currentIndex]);
-      document.querySelector('#bannerLink').setAttribute('href',urlList[currentIndex]);
+     $('#bannerImg').attr({
+      src: imgList[currentIndex],
+      alt: urlList[currentIndex]
+     })
 
       currentIndex = (currentIndex +1) % imgList.length;
       //currentIndex는 목록에서 현재 항목의 순서를 나타내는 숫자입니다.
