제이쿼리 요소탐색 및 생성

--- a/04_HTML-탐색,생성/01-부모요소.html
+++ b/04_HTML-탐색,생성/01-부모요소.html
@@ -30,7 +30,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/4.0.0-beta/jquery.min.js"></script>
     <script>
       /** 1) 부모요소 찾기 */
-     $(".find-parent").on("click", (e) => { 
+     $(".find-parents").on("click", (e) => { 
           //  e.preventDefault()거는 순수자바스크립트 메소드 이기때문에 제이쿼리로 바꿔ㅓ야함!! 
           // 그래서 $()로 감싸준 후 const current = $(e.currentTarget); 로 바꿔줌
           e.preventDefault();
