--- a/04_HTML-탐색,생성/04-이전,다음.html
+++ b/04_HTML-탐색,생성/04-이전,다음.html
@@ -19,23 +19,26 @@
       <span>6</span>
     </div>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/4.0.0-beta/jquery.min.js"></script>
     <script>
       let size1 = 16;
       let size2 = 16;
 
-      document.querySelector("#btn1").addEventListener("click", (e) => {
+      $("#btn1").on("click", (e) => {
         size1 += 2;
 
-        const current = e.currentTarget;
-        current.parentElement.previousElementSibling.style.fontSize =
-          size1 + "px";
+        // 클릭된 버튼 자신
+        const current = $(e.currentTarget);
+        // 자신의 부모에 대한 '이전' 요소의 style 변경
+        current.parent().prev().css('font-size', `${size1}px`);
       });
 
-      document.querySelector("#btn2").addEventListener("click", (e) => {
+      $("#btn2").on("click", (e) => {
         size2 += 2;
 
-        const current = e.currentTarget;
-        current.parentElement.nextElementSibling.style.fontSize = size2 + "px";
+        const current = $(e.currentTarget);
+        // 자신의 부모에 대한 '다음' 요소의 style 변경
+        current.parent().next().css('font-size', `${size2}px`);
       });
     </script>
   </body>
