--- a/04_HTML-탐색,생성/05-submenu-순수jQuery버전.html
+++ b/04_HTML-탐색,생성/05-submenu-순수jQuery버전.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style type="text/css">
+      /** 기본 속성 초기화 */
       .menu-container {
         list-style: none;
         margin: 0;
         padding: 0;
         display: flex;
 
+        /** 메뉴에 포함된 모든 링크에 대한 크기, 배경 지정 및 글자 꾸미기 */
         a {
           display: block;
           width: 179px;
@@ -22,6 +24,7 @@
           color: #cfdfb5;
           text-decoration: none;
 
+          /** 마우스가 올라간 링크에 대한 배경이미지 변경 */ 
           &:hover {
             background: url(./img/btn_over.png);
           }
@@ -29,17 +32,22 @@
 
         .menu-item {
           flex: 0 0;
+          /** 서브 메뉴의 기준점을 부모요소로 지정하기 위한 처리*/ 
           position: relative;
 
+          /** 서브메뉴가 펼쳐지더라도 다른 요소들 위에 떠 있어야 하므로, Position처리 */
           .sub {
             list-style: none;
             margin: 0;
             padding: 0;
             position: absolute;
             z-index: 1000;
-            max-height: 0;
+
+            /* jQuery만으로 구현할 경우 필요없음 --> hidden이면 충분*/
+            /* max-height: 0;
             overflow: hidden;
-            transition: max-height 180ms ease-out;
+            transition: max-height 180ms ease-out; */
+            display: none;
           }
         }
       }
@@ -77,20 +85,28 @@
 
     <h1>Hello World</h1>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/4.0.0-beta/jquery.min.js"></script>
     <script>
-      document.querySelectorAll(".menu-item").forEach((v, i) => {
-        v.addEventListener("mouseover", (e) => {
-          const current = e.currentTarget;
-          const sub = current.querySelector(".sub");
-          sub.style.maxHeight = sub.scrollHeight + "px";
-        });
+      // $(".menu-item").on("mouseenter", (e) => {
+      //     $(e.currentTarget).find('.sub').slideDown(200);
+      //   });
 
-        v.addEventListener("mouseout", (e) => {
-          const current = e.currentTarget;
-          const sub = current.querySelector(".sub");
-          sub.style.maxHeight = "0px";
-        });
-      });
+      // $(".menu-item").on("mouseleave", (e) => {
+      //     $(e.currentTarget).find('.sub').slideUp(200);
+      //   });
+
+        // hover 함수는 두개의 콜백 함수를 사용하여 마우스가 올라갔을때와 내려갔을때의 이벤트를 처리
+        // $(".menu-item").hover(
+        //   (e) => {
+        //     $(e.currentTarget).find('.sub').slideDown(200);
+        //   },
+        //   (e) => {
+        //    $(e.currentTarget).find('.sub').slideUp(200);
+        //   }
+        // );
+
+        // hover 함수에 하나의 콜백을 적용한 경우 마우스가 올라갔을때와 내려갔을 때를 하나의 콜백으로 처리
+        $(".menu-item").hover(e => $(e.currentTarget).find('.sub').slideToggle(200));
     </script>
   </body>
 </html>
