--- a/05_Form요소/04-radio_value.html
+++ b/05_Form요소/04-radio_value.html
@@ -14,13 +14,18 @@
     </form>
     <hr />
     <p id="console"></p>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/4.0.0-beta/jquery.min.js"></script>
     <script>
-      const radio = document.querySelectorAll("input[name='subject']");
-      radio.forEach((v, i) => {
-        v.addEventListener("change", (e) => {
-          document.querySelector("#console").innerHTML = e.currentTarget.value;
+      const radio = $("input[name='subject']");
+      radio.on("change", (e) => {
+          $("#console").html($(e.currentTarget).val());
         });
-      });
+
+        $("#btn").on("click", (e) => {
+          const val = $("input[name='subject']:checked").val();
+          alert(val);
+        });
 
       document.querySelector("#btn").addEventListener("click", (e) => {
         Array.from(radio).some((v, i) => {
