제이쿼리 05_dept_view Ajax연동 해결

--- a/07_Ajax/05-dept_view.html
+++ b/07_Ajax/05-dept_view.html
@@ -51,12 +51,14 @@
     <dl id="container">
 
       <script id="list-item-tmpl" type="text/x-handlebars-template">
-      <dt>학과번호</dt>
-      <dd class="id"> {{item.id}} </dd>
-      <dt>학과명</dt>
-      <dd class="dname"> {{item.dname}} </dd>
-      <dt>학과위치</dt>
-      <dd class="loc"> {{item.loc}} </dd>
+        <dt>학과번호</dt>
+        <dd class="id">{{item.id}}</dd>
+        <dt>학과명</dt>
+        <dd class="dname">{{item.dname}}</dd>
+        <dt>학과위치</dt>
+        <dd class="loc">{{item.loc}}</dd>
+      </script>
+      
     </dl>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/4.0.0-beta/jquery.min.js"></script>
